[metadata]
description-file = README.md
name = timex
version = 0.21
author = Monsyne Dragon
author_email = mdragon@rackspace.com
summary = A time expressions library implementing a mini-language for manipulating datetimes
license = Apache-2
keywords =
    datetime
    manipulation
    transformation
    DSL
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

home-page = https://github.com/stackforge/stacktach-timex

[files]
packages =
    timex
